--- a/todo/templates/signup.html
+++ b/todo/templates/signup.html
@@ -24,10 +24,12 @@
     <body>
        
         <div class="container">
+          
             <div class="row min-vh-100 justify-content-center align-items-center">
               <div class="col-12 col-sm-10 col-md-8 col-lg-6">
                 <form method="post" class="p-4 bg-light rounded shadow">
                   {% csrf_token %}
+                  <h6 align="center"> Create an account</h6><br>
                   <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Username</label>
                     <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="name">
