Custom Designs in all pages

--- a/todo/templates/login.html
+++ b/todo/templates/login.html
@@ -19,7 +19,34 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+<style>
+  .btn-primary {
+    color: #fff;
+    background-color: #ff4e74;
+    border-color: #ff00e9;
+}
+.btn-primary:hover{
+  background-color: #ff005d;
+  border-color: #ff00e9;
+}
+a{
+  color: #ff4e74;
+}
+a:hover{
+  color: #ff005d;
+}
+a:visited{
+  color: #57007c;
+}
 
+.form-control:focus,
+textarea.form-control:focus,
+select.form-control:focus {
+    border-color: #ff4e74; 
+    box-shadow: 0 0 0 0.2rem rgba(255, 0, 85, 0.25); 
+}
+
+</style>
     </head>
     <body>
        
