--- a/todo/templates/signup.html
+++ b/todo/templates/signup.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Sign Up | TODO</title>
         <meta name="description" content="">
+        <link rel="icon" href="{% static 'todoimg.png' %}" type="image/png"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="stylesheet" href="{% static 'css/index.css' %}">
