--- a/todo/templates/todo.html
+++ b/todo/templates/todo.html
@@ -10,6 +10,10 @@
 
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="icon" href="{% static 'todoimg.png' %}" type="image/png"> 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
@@ -46,7 +50,11 @@ select.form-control:focus {
         <div class="row min-vh-100 justify-content-center align-items-center">
             <div class="col-12 col-sm-10 col-md-8 col-lg-6">
                 <form method="post" class="p-4 bg-light rounded shadow">
-                    <img src="{% static 'todoimg.png' %}" class="image-center" alt="TODO Logo"/><br>
+                    <div style="display:flex">
+                        <img src="{% static 'todoimg.png' %}" class="image-center" alt="TODO Logo"/><br>
+                        <a href=""><i class="fas fa-sign-out-alt"></i></a>
+                    </div>
+                    <h5 class="text-center"> Hello, {{user | upper }}!</h5>
                     <h5 class="text-center"> 📝 Get Things Done: Your Personal Todo List </h5><br>
                     {% csrf_token %}
                     <div class="mb-3">
@@ -54,7 +62,16 @@ select.form-control:focus {
                         <textarea class="form-control" name="title" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                     <button type="submit" class="btn btn-dark">Add Task</button>
-                </form>
+                </form><br>
+                    {% for todo in res %}
+                    <div class="mb-3">
+                        <p class="form-control">{{todo.title}}</p>
+                        <a href=""><i class="fas fa-edit"></i></a>
+                        <a href=""><i class="fas fa-trash"></i></a>
+                </div>
+                {% endfor %}
+                
+               
             </div>
         </div>
     </div>
