--- a/todo/templates/edit_todo.html
+++ b/todo/templates/edit_todo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Get Things Done! | ToDo</title>
+    <title>Edit | ToDo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,7 +12,6 @@
     <link rel="icon" href="{% static 'todoimg.png' %}" type="image/png"> 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -27,6 +26,10 @@
     <style>
         body {
             font-family: 'Nunito Sans', sans-serif;
+            height: 100vh; /* Ensure body takes full height */
+            display: flex;
+            align-items: center; /* Center vertically */
+            justify-content: center; /* Center horizontally */
         }
         .image-center {
             display: block;
@@ -35,22 +38,26 @@
             width: 100px; /* Fixed width */
         }
         .shadow {
-          box-shadow: 0 .5rem 1rem rgb(255 91 139 / 47%) !important;
-      }
-      .container{
-        margin-top:10vh;
-      }
-      .form-control:focus,
-textarea.form-control:focus,
-select.form-control:focus {
-    border-color: #ff4e74; 
-    box-shadow: 0 0 0 0.2rem rgba(255, 0, 85, 0.25); 
-}
+            box-shadow: 0 .5rem 1rem rgb(255 91 139 / 47%) !important;
+        }
+        .container {
+            width: 80%; /* Increase container width */
+            max-width: 1200px; /* Optional: set a max width */
+        }
+        #exampleFormControlTextarea1 {
+            height: 160px;
+        }
+        .form-control:focus,
+        textarea.form-control:focus,
+        select.form-control:focus {
+            border-color: #ff4e74; 
+            box-shadow: 0 0 0 0.2rem rgba(255, 0, 85, 0.25); 
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="row min-vh-100 align-items-start">
+        <div class="row min-vh-100 justify-content-center align-items-center">
             <!-- Form on the left side -->
             <div class="col-md-4">
                 <form method="post" class="p-4 bg-light rounded shadow">
@@ -62,10 +69,10 @@ select.form-control:focus {
                     <h5 class="text-center"> 📝 Get Things Done: Your Personal Todo List </h5><br>
                     {% csrf_token %}
                     <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">New task? Add it here!</label>
-                        <textarea class="form-control" name="title" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <label for="exampleFormControlTextarea1" class="form-label">Edit your Task</label>
+                        <input type="textarea" height="300px" class="form-control" name="title" value="{{obj.title}}" id="exampleFormControlTextarea1" rows="3">
                     </div>
-                    <button type="submit" class="btn btn-dark">Add Task</button>
+                    <button type="submit" class="btn btn-dark">Update Task</button>
                 </form>
             </div>
 
@@ -77,7 +84,7 @@ select.form-control:focus {
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">{{todo.title}}</h5>
-                                    <a href="/edit_todo/{{todo.srno}}"><i class="fas fa-edit"></i></a>
+                                    <a href="#"><i class="fas fa-edit"></i></a>
                                     <a href="#"><i class="fas fa-trash"></i></a>
                                 </div>
                             </div>
@@ -93,5 +100,4 @@ select.form-control:focus {
         </div>
     </div>
 </body>
-
 </html>
