--- a/todo/templates/todo.html
+++ b/todo/templates/todo.html
@@ -36,6 +36,7 @@
         }
         .shadow {
           box-shadow: 0 .5rem 1rem rgb(255 91 139 / 47%) !important;
+          margin-bottom: 40px;
       }
       .container{
         margin-top:10vh;
@@ -83,9 +84,10 @@ select.form-control:focus {
                             </div>
                         </div>
 
+
                         {% if forloop.counter|divisibleby:3 %}
                             </div>
-                            <div class="row w-100 mx-0">
+                            <div class="row w-100 mx-0 ">
                         {% endif %}
                     {% endfor %}
                 </div>
