--- a/todo/templates/edit_todo.html
+++ b/todo/templates/edit_todo.html
@@ -47,6 +47,10 @@
         #exampleFormControlTextarea1 {
             height: 160px;
         }
+        a{
+            text-decoration:none;
+            color:black;
+          }
         .form-control:focus,
         textarea.form-control:focus,
         select.form-control:focus {
@@ -63,7 +67,7 @@
                 <form method="post" class="p-4 bg-light rounded shadow">
                     <div style="display:flex">
                         <img src="{% static 'todoimg.png' %}" class="image-center" alt="TODO Logo"/><br><br>
-                        <a href=""><i class="fas fa-sign-out-alt"></i></a>
+                        <a href="{% url 'signout' %}"><i class="fas fa-sign-out-alt"></i></a>
                     </div>
                     <h5 class="text-center"> Hello, {{user | upper }}!</h5><br>
                     <h5 class="text-center"> 📝 Get Things Done: Your Personal Todo List </h5><br>
