--- a/todo/templates/login.html
+++ b/todo/templates/login.html
@@ -10,72 +10,74 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="stylesheet" href="{% static 'css/index.css' %}">
-         <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
-<style>
-  .btn-primary {
-    color: #fff;
-    background-color: #ff4e74;
-    border-color: #ff00e9;
-}
-.btn-primary:hover{
-  background-color: #ff005d;
-  border-color: #ff00e9;
-}
-a{
-  color: #ff4e74;
-}
-a:hover{
-  color: #ff005d;
-}
-a:visited{
-  color: #57007c;
-}
-
-.form-control:focus,
-textarea.form-control:focus,
-select.form-control:focus {
-    border-color: #ff4e74; 
-    box-shadow: 0 0 0 0.2rem rgba(255, 0, 85, 0.25); 
-}
-
-</style>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+        <style>
+            .btn-primary {
+                color: #fff;
+                background-color: #ff4e74;
+                border-color: #ff00e9;
+            }
+            .btn-primary:hover {
+                background-color: #ff005d;
+                border-color: #ff00e9;
+            }
+            a {
+                color: #ff4e74;
+            }
+            a:hover {
+                color: #ff005d;
+            }
+            a:visited {
+                color: #57007c;
+            }
+            .form-control:focus,
+            textarea.form-control:focus,
+            select.form-control:focus {
+                border-color: #ff4e74; 
+                box-shadow: 0 0 0 0.2rem rgba(255, 0, 85, 0.25); 
+            }
+        </style>
     </head>
     <body>
-       
         <div class="container">
-            
             <div class="row min-vh-100 justify-content-center align-items-center">
-              <div class="col-12 col-sm-10 col-md-8 col-lg-6">
-                <form method="post" class="p-4 bg-light rounded shadow">
-                    <h6 align="center"> Login to your account</h6><br>
-                 
-                  {% csrf_token %}
-                  <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="name">
-                  </div>
-               
-                  <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" name="pwd">
-                  </div>
-                  <button type="submit" class="btn btn-primary w-100">Submit</button>
-                  <div class="mt-3 text-center">
-                    <h6 class="already"> Don't have an account? <a href="/signup">Create an account.</a></h6>
-                  </div>
-                </form>
-              </div>
+                <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+                    <form method="post" class="p-4 bg-light rounded shadow">
+                        <h6 align="center">Login to your account</h6><br>
+                        {% csrf_token %}
+                        
+                        <!-- Display error messages -->
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-danger" role="alert">
+                                    {{ message }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                        
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Username</label>
+                            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="name" required>
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1" name="pwd" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">Submit</button>
+                        <div class="mt-3 text-center">
+                            <h6 class="already">Don't have an account? <a href="/signup">Create an account.</a></h6>
+                        </div>
+                    </form>
+                </div>
             </div>
-          </div>
-          
+        </div>
     </body>
 </html>
